# NOXUS

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  history.html  pyproject.toml  tasks.json
.claude/: settings.json
.claude/context/: project-map.md
.claude/hooks/: README.md
analysis/: autocorr_significance.py  daily_prophet_probe.py  deep_exploration.py  nox008_spatial_scale.py  preliminary_signal.py  scale_sensitivity.py  seasonality_probe.py
data/derived/: benchmark_auxiliary.parquet  benchmark_tangshan_bf_operating_rate.parquet  catalyst_results.json  catalyst_summary.txt  scale_sensitivity.csv  steel_validation_results.json  steel_validation_summary.txt  tangshan_steel_facilities.csv
decisions/: answers.md  architecture-decisions.md  rejected-options.md
docs/: data-access.md  exploration-results.html  motivation.md  preliminary-results.html
literature/: README.md  references.bib  sintesis-literatura.html
noxus/: __init__.py
noxus/attribution/: __init__.py  source.py
noxus/catalyst/: __init__.py  events.py  groundtruth.py  market.py  report.py  study.py
noxus/cli/: main.py
noxus/config/: __init__.py  region.py  run.py
noxus/data/: __init__.py  benchmark.py  era5.py  gridding.py  tropomi.py  verify_no2.py
noxus/signal/: __init__.py  index.py  intensity.py  prophet_deseason.py
noxus/validation/: __init__.py  leadlag.py  preprocess.py  report.py  robust.py  scale.py
paper/: nox008_spatial_scale.tex
scripts/: run-lint.sh  run-tests.sh
specs/crea-benchmark-validation/: assumptions.html  (+6 more)
tests/: test_smoke.py
(+90 files in other folders)
