[project]
name = "noxus"
version = "0.1.0"
description = "Public, reproducible pipeline from satellite NO2 to a steel-sector activity signal"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "xarray>=2024.6",      # gridded NO2 columns
    "pyarrow>=16.0",       # parquet storage of derived series
    "httpx>=0.27",         # public-API access (Copernicus Data Space Ecosystem)
    "pyyaml>=6.0",         # study-region / run configuration
    "python-dotenv>=1.0",  # optional API credentials from .env
    "rich>=13.7",          # CLI output
    "openeo>=0.50.0",
    "matplotlib>=3.11.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "cdsapi>=0.7.7",
]

[project.optional-dependencies]
# Heavier geospatial / Earth-observation backends, kept optional so the core installs cleanly.
geo = [
    "netCDF4>=1.6",        # read native S5P L2 NetCDF products
    "rasterio>=1.3",       # raster I/O for plume work (Landsat/Sentinel-2)
    "earthengine-api>=0.1.400",  # GEE mirror of TROPOMI for research use
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
noxus = "noxus.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noxus"]

[tool.ruff]
line-length = 100
target-version = "py312"
